fix overflow on small screens

--- a/src/css/guitar.css
+++ b/src/css/guitar.css
@@ -16,4 +16,6 @@
 
 .guitar-neck {
   margin-bottom: 10px;
+  overflow-x: auto;
+  width: 100vw;
 }
